src/test/deca/syntax/parser/invalid/decl_var_multiple_assign_no_ident.deca
// Parser test, seconf identifier is null

{
    int x, = 8;
}